--- a/mc.html
+++ b/mc.html
@@ -55,7 +55,7 @@
 <body>
     <!-- Anuncio de Bowie como Empleado del Mes -->
     <div class="empleado-del-mes">
-        <img src="images/bowie.png" alt="Bowie">
+        <img src="bowie.png" alt="Bowie">
         <p>Empleado del Mes 🏆</p>
     </div>
     
