--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             margin: 0 auto;
         }
 
-        /* Tarjetas de Servicio Premium - Versión simplificada para móviles */
+        /* Tarjetas de Servicio Premium - Versión mejorada */
         .service-card {
             height: 400px;
             border-radius: 20px;
@@ -253,12 +253,50 @@
             justify-content: center;
             padding: 30px;
             text-align: center;
+            transform-style: preserve-3d;
+        }
+
+        .service-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, var(--accent), var(--accent-dark));
+            opacity: 0;
+            transition: var(--transition);
+            z-index: 0;
+        }
+
+        .service-card:hover {
+            transform: translateY(-10px);
+            box-shadow: var(--shadow-xl);
+        }
+
+        .service-card:hover::before {
+            opacity: 0.1;
+        }
+
+        .service-card-content {
+            position: relative;
+            z-index: 1;
+            transition: var(--transition);
+        }
+
+        .service-card:hover .service-card-content {
+            transform: scale(1.03);
         }
 
         .card-icon {
             font-size: clamp(2.5rem, 4vw, 3.5rem);
             color: var(--accent);
             margin-bottom: 25px;
+            transition: var(--transition);
+        }
+
+        .service-card:hover .card-icon {
+            transform: scale(1.1) rotate(5deg);
         }
 
         .card-title {
@@ -267,12 +305,22 @@
             margin-bottom: 15px;
             color: var(--light);
             font-weight: 700;
+            transition: var(--transition);
+        }
+
+        .service-card:hover .card-title {
+            color: var(--accent);
         }
 
         .service-card p {
             color: rgba(255,255,255,0.8);
             font-size: clamp(0.9rem, 1.1vw, 1.1rem);
             margin-bottom: 25px;
+            transition: var(--transition);
+        }
+
+        .service-card:hover p {
+            color: var(--light);
         }
 
         .card-btn {
@@ -292,11 +340,30 @@
             font-size: clamp(0.8rem, 1vw, 0.95rem);
             min-width: 160px;
             height: 40px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .card-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255,255,255,0.2);
+            transform: translateX(-100%);
+            transition: var(--transition);
         }
 
         .card-btn:hover {
             background: var(--accent-dark);
             transform: translateY(-3px);
+            box-shadow: 0 10px 20px rgba(255, 215, 0, 0.3);
+        }
+
+        .card-btn:hover::before {
+            transform: translateX(100%);
         }
 
         /* Footer Premium */
@@ -516,26 +583,32 @@
         <div class="services-grid">
             <!-- Tarjeta 1 -->
             <div class="service-card">
-                <i class="fas fa-laptop-code card-icon"></i>
-                <h3 class="card-title">Mantenimiento de Computadoras</h3>
-                <p>Tecnología de vanguardia para optimizar el rendimiento de tus equipos</p>
-                <a href="mc.html" class="card-btn">Ver detalles</a>
+                <div class="service-card-content">
+                    <i class="fas fa-laptop-code card-icon"></i>
+                    <h3 class="card-title">Mantenimiento de Computadoras</h3>
+                    <p>Tecnología de vanguardia para optimizar el rendimiento de tus equipos</p>
+                    <a href="mc.html" class="card-btn">Ver detalles</a>
+                </div>
             </div>
             
             <!-- Tarjeta 2 -->
             <div class="service-card">
-                <i class="fas fa-hand-sparkles card-icon"></i>
-                <h3 class="card-title">Uñas Profesionales</h3>
-                <p>Manicura y pedicura premium con los más altos estándares de calidad</p>
-                <a href="unas.html" class="card-btn">Ver detalles</a>
+                <div class="service-card-content">
+                    <i class="fas fa-hand-sparkles card-icon"></i>
+                    <h3 class="card-title">Uñas Profesionales</h3>
+                    <p>Manicura y pedicura premium con los más altos estándares de calidad</p>
+                    <a href="unas.html" class="card-btn">Ver detalles</a>
+                </div>
             </div>
             
             <!-- Tarjeta 3 -->
             <div class="service-card">
-                <i class="fas fa-cheese card-icon"></i>
-                <h3 class="card-title">Productos Lácteos</h3>
-                <p>Elaboración artesanal de quesos con ingredientes naturales seleccionados</p>
-                <a href="quesos.html" class="card-btn">Ver detalles</a>
+                <div class="service-card-content">
+                    <i class="fas fa-cheese card-icon"></i>
+                    <h3 class="card-title">Productos Lácteos</h3>
+                    <p>Elaboración artesanal de quesos con ingredientes naturales seleccionados</p>
+                    <a href="quesos.html" class="card-btn">Ver detalles</a>
+                </div>
             </div>
         </div>
     </section>
