--- a/mc.html
+++ b/mc.html
@@ -728,10 +728,7 @@
                 <p>Contacto: <a href="mailto:sebastianaboytes199@gmail.com">sebastianaboytes199@gmail.com</a></p>
                 <p>Teléfono: <a href="tel:5522516729">5522516729</a></p>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="www.linkedin.com/in/aboytes-uribe-joshua-sebastián-419511281" class="social-link"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <p>&copy; 2025 SAU. Todos los derechos reservados.</p>
             </div>
