--- a/mc.html
+++ b/mc.html
@@ -727,7 +727,13 @@
                 <p>Expertos en soluciones tecnológicas personalizadas</p>
                 <p>Contacto: <a href="mailto:sebastianaboytes199@gmail.com">sebastianaboytes199@gmail.com</a></p>
                 <p>Teléfono: <a href="tel:5522516729">5522516729</a></p>
+                <p>Catálogo: <a href="https://www.canva.com/design/DAGua0nbn2Y/tOIcs-MvWXPCXK93SmZnqg/edit?utm_content=DAGua0nbn2Y&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Ver nuestros servicios</a></p>
                 <p>&copy; 2025 SAU. Todos los derechos reservados.</p>
+                <div class="social-links">
+                    <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
             
             <div class="empleado-del-mes-container">
