--- a/mc.html
+++ b/mc.html
@@ -730,9 +730,8 @@
                 <p>Catálogo: <a href="https://www.canva.com/design/DAGua0nbn2Y/tOIcs-MvWXPCXK93SmZnqg/edit?utm_content=DAGua0nbn2Y&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Ver nuestros servicios</a></p>
                 <p>&copy; 2025 SAU. Todos los derechos reservados.</p>
                 <div class="social-links">
-                    <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/share/16JvB7byMm/" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/josh_aboyfd?igsh=MXZzbG41eGswYjFqYQ==" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             
